--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,7 @@ set -g pane-border-style fg=white
 set -g pane-active-border-style fg=blue
 
 ## statusbar
+set -g status-position top
 set -g status-style bg=black,fg='#7e57c2'
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
