--- a/tmux.conf
+++ b/tmux.conf
@@ -18,14 +18,23 @@ bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
-# enable mouse mode
-set -g mouse on
-
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# create windows using current path of pane
+bind c new-window -c "#{pane_current_path}"
+
+# start window numbering at 1
+set -g base-index 1
+
+# renumber windows when created/deleted to keep the window numbers consistent
+set -g renumber-windows on
+
 # set vi as default editor
 set-option -g status-keys vi
+
+# enable mouse mode
+set -g mouse on
 
 # colors and styles
 ##  modes
