--- a/tmux.conf
+++ b/tmux.conf
@@ -3,14 +3,11 @@ unbind C-b
 set -g prefix C-a
 bind-key -r C-a send-prefix
 
-# split panes using | and -
-bind | split-window -h
+# split panes using \ and -
+bind \\ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
-
-# reload config file
-bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # switch panes using vim-like bindings
 bind -n C-h select-pane -L
@@ -29,9 +26,6 @@ set -g base-index 1
 
 # renumber windows when created/deleted to keep the window numbers consistent
 set -g renumber-windows on
-
-# set vi as default editor
-set-option -g status-keys vi
 
 # enable mouse mode
 set -g mouse on
@@ -54,3 +48,10 @@ set -g window-status-style bg=black,fg='#7e57c2'
 
 ## messages
 set -g message-style bg=black,fg=brightblack
+
+# list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
