--- a/tmux.conf
+++ b/tmux.conf
@@ -40,14 +40,14 @@ set -g pane-border-style fg=white
 set -g pane-active-border-style fg=blue
 
 ## statusbar
-set -g status-style bg=black,fg='#7e57c2'
+set -g status-style bg=black,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
 set -g window-status-current-style bg=black,fg=brightyellow
 set -g window-status-style bg=black,fg='#7e57c2'
 
 ## messages
-set -g message-style bg=black,fg=brightblack
+set -g message-style bg=black,fg=green
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
