--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ bind -n C-l select-pane -R
 set-option -g allow-rename off
 
 # create windows using current path of pane
-bind c new-window -c "#{pane_current_path}"
+bind c new-window -c '#{pane_current_path}'
 
 # start window numbering at 1
 set -g base-index 1
@@ -29,6 +29,9 @@ set -g renumber-windows on
 
 # enable mouse mode
 set -g mouse on
+
+# use xterm-256color as default terminal
+set -g default-terminal 'xterm-256color'
 
 # colors and styles
 ##  modes
