update split pane bindings and add copy mode (vi) bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,8 @@ set -g prefix C-a
 bind-key -r C-a send-prefix
 
 # split panes using \ and -
-bind \\ split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+bind \\ split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # switch panes using vim-like bindings
 bind -n C-h select-pane -L
@@ -29,6 +27,13 @@ set -g renumber-windows on
 
 # enable mouse mode
 set -g mouse on
+
+# use vim keybindings in copy mode
+set -g mode-keys vi
+
+# copy-mode (vi) bindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 # use xterm-256color as default terminal
 set -g default-terminal 'xterm-256color'
