--- a/tmux.conf
+++ b/tmux.conf
@@ -41,21 +41,21 @@ set -g default-terminal 'xterm-256color'
 # colors and styles
 ##  modes
 set -g clock-mode-colour blue
-set -g mode-style bg=yellow,fg=black
+set -g mode-style bg=yellow,fg=default
 
 ## panes
 set -g pane-border-style fg=white
 set -g pane-active-border-style fg=blue
 
 ## statusbar
-set -g status-style bg=black,fg=white
+set -g status-style bg=default,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
-set -g window-status-current-style bg=black,fg=brightyellow
-set -g window-status-style bg=black,fg='#7e57c2'
+set -g window-status-current-style bg=default,fg=brightyellow
+set -g window-status-style bg=default,fg='#7e57c2'
 
 ## messages
-set -g message-style bg=black,fg=green
+set -g message-style bg=default,fg=green
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
