modify fg color to black instead of default for copy mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set -g default-terminal 'xterm-256color'
 # colors and styles
 ##  modes
 set -g clock-mode-colour blue
-set -g mode-style bg=yellow,fg=default
+set -g mode-style bg=yellow,fg=black
 
 ## panes
 set -g pane-border-style fg=white
