add break pane binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,9 @@ set -g base-index 1
 # renumber windows when created/deleted to keep the window numbers consistent
 set -g renumber-windows on
 
+# break pane out of current window to new window with b
+bind-key b break-pane -d
+
 # enable mouse mode
 set -g mouse on
 
