--- a/tmux.conf
+++ b/tmux.conf
@@ -57,8 +57,8 @@ set -g pane-active-border-style fg=blue
 set -g status-style bg=default,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
-set -g window-status-current-style bg=default,fg=brightyellow
-set -g window-status-style bg=default,fg='#7e57c2'
+set -g window-status-current-style bg=default,fg=yellow
+set -g window-status-style bg=default,fg=brightmagenta
 
 ## messages
 set -g message-style bg=default,fg=green
