--- a/tmux.conf
+++ b/tmux.conf
@@ -57,11 +57,11 @@ set -g pane-active-border-style fg=blue
 set -g status-style bg=default,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
-set -g window-status-current-style bg=default,fg=yellow
-set -g window-status-style bg=default,fg=brightmagenta
+set -g window-status-current-style bg=default,fg=green
+set -g window-status-style bg=default,fg=red
 
 ## messages
-set -g message-style bg=default,fg=green
+set -g message-style bg=default,fg=magenta
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
