--- a/tmux.conf
+++ b/tmux.conf
@@ -58,7 +58,7 @@ set -g status-style bg=default,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
 set -g window-status-current-style bg=default,fg=green
-set -g window-status-style bg=default,fg=red
+set -g window-status-style bg=default,fg=brightblack
 
 ## messages
 set -g message-style bg=default,fg=magenta
