--- a/tmux.conf
+++ b/tmux.conf
@@ -58,10 +58,10 @@ set -g status-style bg=default,fg=white
 set -g status-left '#[fg=blue][#S] '
 set -g status-right ''
 set -g window-status-current-style bg=default,fg=green
-set -g window-status-style bg=default,fg=brightblack
+set -g window-status-style bg=default,fg=white
 
 ## messages
-set -g message-style bg=default,fg=magenta
+set -g message-style bg=default,fg=yellow
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
