--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,7 @@ set -g mode-style bg=yellow,fg=black
 
 ## panes
 set -g pane-border-style fg=white
-set -g pane-active-border-style fg=blue
+set -g pane-active-border-style fg=yellow
 
 ## statusbar
 set -g status-style bg=default,fg=white
