--- a/tmux.conf
+++ b/tmux.conf
@@ -63,6 +63,9 @@ set -g window-status-style bg=default,fg=white
 ## messages
 set -g message-style bg=default,fg=yellow
 
+# set shell
+set -g default-shell /bin/zsh
+
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
