--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,8 @@ set -g mode-keys vi
 
 # copy-mode (vi) bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 # use xterm-256color as default terminal
 set -g default-terminal 'xterm-256color'
