--- a/tmux.conf
+++ b/tmux.conf
@@ -46,6 +46,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xc
 
 # use xterm-256color as default terminal
 set -g default-terminal 'xterm-256color'
+set -ga terminal-overrides ",*256col*:Tc"
 
 # colors and styles
 ##  modes
