Use screen-256 for terminal.

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,7 +45,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 # use xterm-256color as default terminal
-set -g default-terminal 'xterm-256color'
+set -g default-terminal 'screen-256color'
 set -ga terminal-overrides ",*256col*:Tc"
 
 # colors and styles
