Change mode background color to blue.

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,7 @@ set -ga terminal-overrides ",*256col*:Tc"
 # colors and styles
 ##  modes
 set -g clock-mode-colour blue
-set -g mode-style bg=yellow,fg=black
+set -g mode-style bg=blue,fg=black
 
 ## panes
 set -g pane-border-style fg=white
