--- a/tmux.conf
+++ b/tmux.conf
@@ -41,8 +41,7 @@ set -g mode-keys vi
 
 # copy-mode (vi) bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -i -selection clipboard'
 
 # use xterm-256color as default terminal
 set -g default-terminal 'screen-256color'
