--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -selection clipboard'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -i -selection clipboard'
 
-# use xterm-256color as default terminal
+# use screen-256color as default terminal
 set -g default-terminal 'screen-256color'
 set -ga terminal-overrides ",*256col*:Tc"
 
