Update terminal settings.

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,9 +44,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -selection clipboard'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -i -selection clipboard'
 
-# use screen-256color as default terminal
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides ",*256col*:Tc"
+# terminal settings
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # colors and styles
 ##  modes
