--- a/tmux.conf
+++ b/tmux.conf
@@ -6,14 +6,14 @@ set -g prefix C-a
 bind-key -r C-a send-prefix
 
 # split panes using \ and -
-bind \\ split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
+bind-key \\ split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 
 # don't rename windows automatically
 set-option -g allow-rename off
 
 # create windows using current path of pane
-bind c new-window -c '#{pane_current_path}'
+bind-key c new-window -c '#{pane_current_path}'
 
 # start window numbering at 1
 set -g base-index 1
