Replace set with set-option.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set -g prefix C-a
+set-option -g prefix C-a
 bind-key -r C-a send-prefix
 
 # split panes using \ and -
@@ -16,10 +16,10 @@ set-option -g allow-rename off
 bind-key c new-window -c '#{pane_current_path}'
 
 # start window numbering at 1
-set -g base-index 1
+set-option -g base-index 1
 
 # renumber windows when created/deleted to keep the window numbers consistent
-set -g renumber-windows on
+set-option -g renumber-windows on
 
 # break pane out of current window to new window with b
 bind-key b break-pane -d
@@ -28,46 +28,46 @@ bind-key b break-pane -d
 bind-key C-j choose-tree
 
 # enable mouse mode
-set -g mouse on
+set-option -g mouse on
 
 # use vim keybindings in copy mode
-set -g mode-keys vi
+set-option -g mode-keys vi
 
 # copy-mode (vi) bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -selection clipboard'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -i -selection clipboard'
 
-# terminal settings
-set -g default-terminal 'tmux-256color'
-set -ga terminal-overrides ",xterm-256color:Tc"
+# terminal
+set-option -g default-terminal 'tmux-256color'
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # colors and styles
 ##  modes
-set -g clock-mode-colour blue
-set -g mode-style bg=blue,fg=black
+set-option -g clock-mode-colour blue
+set-option -g mode-style bg=blue,fg=black
 
 ## panes
-set -g pane-border-style fg=white
-set -g pane-active-border-style fg=yellow
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=yellow
 
 ## statusbar
-set -g status-style bg=default,fg=white
-set -g status-left '#[fg=blue][#S] '
-set -g status-right ''
-set -g window-status-current-style bg=default,fg=green
-set -g window-status-style bg=default,fg=white
+set-option -g status-style bg=default,fg=white
+set-option -g status-left '#[fg=blue][#S] '
+set-option -g status-right ''
+set-option -g window-status-current-style bg=default,fg=green
+set-option -g window-status-style bg=default,fg=white
 
 ## messages
-set -g message-style bg=default,fg=yellow
+set-option -g message-style bg=default,fg=yellow
 
-# set shell
-set -g default-shell /bin/zsh
+# shell
+set-option -g default-shell /bin/zsh
 
 # list of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
 
 # initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '$HOME/.config/tmux/plugins/tpm/tpm'
