Remove vim tmux navigator and just use own vim-like bindings.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,12 @@ bind-key -r C-a send-prefix
 bind-key \\ split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 
+# switch panes using vim-like bindings
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
@@ -62,7 +68,6 @@ set-option -g default-shell /bin/zsh
 # list of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
-set-option -g @plugin 'christoomey/vim-tmux-navigator'
 
 # initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '$HOME/.config/tmux/plugins/tpm/tpm'
