Use command instead of meta for window movement.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,10 +8,10 @@ bind-key \\ split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 
 # switch panes using vim-like bindings
-bind-key -n M-h select-pane -L
-bind-key -n M-j select-pane -D
-bind-key -n M-k select-pane -U
-bind-key -n M-l select-pane -R
+bind-key -n C-h select-pane -L
+bind-key -n C-j select-pane -D
+bind-key -n C-k select-pane -U
+bind-key -n C-l select-pane -R
 
 # don't rename windows automatically
 set-option -g allow-rename off
