--- a/tmux.conf
+++ b/tmux.conf
@@ -40,9 +40,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe 'xclip -i -selection clipboard
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe 'xclip -i -selection clipboard'
 
 # terminal
-# comment line below for macOS
-set-option -g default-terminal 'tmux-256color'
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal 'screen-256color'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # colors and styles
 ##  modes
